--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Prerequisites
-*.d
-
 # Compiled Object files
 *.slo
 *.lo
@@ -30,3 +27,10 @@
 *.exe
 *.out
 *.app
+
+# Build directory
+build
+
+# Qt user file
+CMakeLists.txt.user
+
