--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Compile Libraries
 add_subdirectory("lib")
-#add_subdirectory("cli")
+add_subdirectory("cli")
 add_subdirectory("gui")
 
 # Compile Binaries
